Images with basic styling added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>WanderWise</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-
 </head>
 <body>
 
@@ -33,10 +32,22 @@
   <div class="info">
     <h2>Why WanderWise?</h2>
     <div class="info-cards">
-      <div>🗺️ Tailored itineraries based on your travel style and time</div>
-      <div>✈️ Real-time flight and hotel deal suggestions</div>
-      <div>📍 Offline maps and must-see recommendations</div>
-      <div>🗣️ Language tips and local culture cheat sheets</div>
+      <div class="feature">
+        <img src="itienary.jpg" alt="Tailored itineraries">
+        <div>🗺️ Tailored itineraries based on your travel style and time</div>
+      </div>
+      <div class="feature">
+        <img src="flight.jpg" alt="Flight and hotel deals">
+        <div>✈️ Real-time flight and hotel deal suggestions</div>
+      </div>
+      <div class="feature">
+        <img src="map.jpg" alt="Offline maps and places">
+        <div>📍 Offline maps and must-see recommendations</div>
+      </div>
+      <div class="feature">
+        <img src="locals.jpg" alt="Language and culture tips">
+        <div>🗣️ Language tips and local culture cheat sheets</div>
+      </div>
     </div>
   </div>
 
