Used flex for final alignement

--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 
   <!-- Hero Section -->
   <div class="website">
+    <div class="sub">
     <h1>Plan Smarter. Travel Better.</h1>
     <p>
       WanderWise uses AI to create personalized travel itineraries in seconds — so you can focus on the adventure, not the logistics.
     </p>
     <button class="signup">Get Started</button>
+    </div>
+    
+    <div class="main-image">
+        <img src="travel.jpg" alt="Travel the world" />
+      </div>
+   
   </div>
 
   <!-- Info Section -->
@@ -63,8 +70,10 @@
 
   <!-- Call to Action Section -->
   <div class="section">
+    <div class="text">
     <h3>Ready to explore smarter?</h3>
     <p>Let WanderWise plan your next adventure. No stress, no spreadsheets — just pure wanderlust.</p>
+    </div>
     <button class="signup">Try WanderWise Now</button>
   </div>
 
